new_target_nodes/app-node-2/main.tf
# cloud provider is AWS
 
provider "aws" {
    # use Ireland region
    region = "eu-west-1"
}

resource "aws_security_group" "tech515_ansible_target_node_app_sg" {
    # ... other configuration ...
    name = "tech515-lucy-new-target-node-app-allow-port-22-80-3000"
    description = "Allow SSH port 22, HTTP port 80, app port 3000 from anywhere"


    # Allow port 22 my IP
    ingress {
        description = "SSH from anywhere"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    # Allow port 3000 from all
    ingress {
        description = "app port 3000 from anywhere"
        from_port   = 3000
        to_port     = 3000
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Allow port 80 from all
    ingress {
        description = "HTTP port 80 from anywhere"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Allow all outbound traffic
    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

    # name the service
    tags = {
        Name = "tech515-lucy-new-target-node-app-allow-port-22-80-3000" # what you want it to be called when it's actually made
    }
}

resource "aws_instance" "tech515_ansible_target_node_instance" {

    # Ubuntu Server 22.04 LTS (free tier eligible) AMI
    ami = "ami-0c1c30571d2dae5c9"

    # what type of instance to launch
    instance_type = "t3.micro"
 
    # please add a public ip to this instance
    associate_public_ip_address = true

    # Attach the security group to your EC2 instance:
    vpc_security_group_ids = [aws_security_group.tech515_ansible_target_node_app_sg.id]   

    # Add public key we made already
    key_name = "tech515-lucy-aws"

    user_data = ""
    
    # name the service
    tags = {
        Name = "tech515-lucy-new-node-app"
    }
}
